--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,9 @@
 							<!-- <div class="submit-area">
 								<input type="submit" class="theme-btn-s3" value="Submit" id="submit">  
 							</div> -->
-							<button type="submit" class="btn btn-default btn-block" value="Submit" id="submit" >Submit</button>
+							<div style="display: flex; justify-content: center; align-items: center; height: 3vh; margin: 3rem;">
+								<button type="submit" class="btn btn-default btn-block" value="Submit" id="submit" style="width: 20rem;" >Submit</button>
+							</div>
 						</div>
 						
 					</form>
