--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,7 @@
 										}
 									</style>									
 									<div>
-										<select style="padding-left:10000vw; margin-bottom: 0.5rem; border-radius: 10px;" name="house" class="form-control">
+										<select style="margin-bottom: 0.5rem; border-radius: 10px;" name="house" class="form-control">
 											<option selected>Your're</option>
 											<option >Khách nhà trai</option>
 											<option>Khách nhà gái</option>
